I added cake for you

--- a/test/index.htm
+++ b/test/index.htm
@@ -9,7 +9,7 @@
         
     </head>
     <body>
-
         <h1>Hello there human</h1>
+        <img src="media/cake.jpg" alt="image of kims cake">
     </body>
 </html>
