<p> added to index, background color changed and new font added

--- a/test/index.htm
+++ b/test/index.htm
@@ -11,5 +11,7 @@
     <body>
         <h1>Hello there human</h1>
         <img src="media/cake.jpg" alt="image of kims cake">
+        <h2> wow!</h2>
+        <p>AMAZING</p>
     </body>
 </html>
