Changed text color, changed h1

--- a/test/index.htm
+++ b/test/index.htm
@@ -9,7 +9,7 @@
         
     </head>
     <body>
-        <h1>Hello there human</h1>
+        <h1>We have cake</h1>
         <img src="media/cake.jpg" alt="image of kims cake">
         <h2> wow!</h2>
         <p>AMAZING</p>
