--- a/test/index.htm
+++ b/test/index.htm
@@ -13,5 +13,6 @@
         <img src="media/cake.jpg" alt="image of kims cake">
         <h2> wow!</h2>
         <p>AMAZING</p>
+        <h2>See more cakes!</h2>
     </body>
 </html>
