added <p> color, underline to h1 and image responsitivity

--- a/test/index.htm
+++ b/test/index.htm
@@ -10,8 +10,13 @@
     </head>
     <body>
         <h1>Hello there human</h1>
+        <p>yaass</p>
         <img src="media/cake.jpg" alt="image of kims cake">
         <h2> wow!</h2>
         <p>AMAZING</p>
+
+
+        <h2>nice</h2>
+        <p>indeed nice but in red</p>
     </body>
 </html>
